# discord_music_bot

./: .env_example  .flake8  .gitignore  LICENSE  config.py  general.py  pyproject.toml  readme.md  requirements.txt  run.py  update_bot.sh
.github/workflows/: discord_bot.yml
bot_cogs/: errors.py  music.py  utility.py
config/systemd/: music_bot.service
core/: helpers.py  music_player.py  playlist.py  settings.py  track.py  utils.py
src/: config.py
src/bot/: events.py  main.py
src/bot/cogs/: __init__.py  _base.py  errors.py  management.py  music.py  test.py
src/bot/view/: player.py
src/music/: player.py  playlist.py  track.py
src/sources/: youtube.py
